fixed up outlook post

--- a/docs/_includes/main.scss
+++ b/docs/_includes/main.scss
@@ -62,6 +62,9 @@
 // 1.6 Zoom
 @import '1-tools/zoom';
 
+// 1.7 Goldie
+@import '1-tools/goldie';
+
 
 /* >>>>>>>>>>>>>> :: 2-Base Styles <<<<<<<<<<<<<<< */
 
