--- a/docs/_includes/contact-link.html
+++ b/docs/_includes/contact-link.html
@@ -27,5 +27,6 @@
     {% if site.data.settings.linkedin %}
       <li><a href="{{ site.data.settings.linkedin }}"><i class="ion ion-logo-linkedin"></i></a></li>
     {% else %} {% endif %}
+    <li><a rel="me" href="https://mastodon.social/@mattgoldman"><i class="ion ion-logo-mastodon"></i></a></li>
   </ul>
 </div>
