--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,8 @@ layout: compress
 
     {% include js-selector.html %}
 
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="goforgoldman" data-description="Support me on Buy me a coffee!" data-message="Hope you're enjoying my content! 😊" data-color="#FF813F" data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+
   </body>
 
 </html>
