fix: Ensure sharing links have a trailing slash in the encoded URL

--- a/Posts/template.razor
+++ b/Posts/template.razor
@@ -173,7 +173,7 @@
     {
         var currentUrl = NavigationManager.Uri;
 
-        var encodedUrl = Uri.EscapeDataString(currentUrl);
+        var encodedUrl = Uri.EscapeDataString(currentUrl).TrimEnd('/') + "/";
 
         _blueskyLink += $"Check out @Title: {encodedUrl}";
         _linkedinLink += encodedUrl;
