Add trending topics and tweak some styling

--- a/Components/NoteContainer.razor
+++ b/Components/NoteContainer.razor
@@ -1,5 +1,5 @@
 <div class="mx-auto w-full max-w-4xl mb-6">
-    <div class="rounded-lg bg-gray-50 p-4 ring-1 ring-inset ring-gray-200">
+    <div class="border-t-4 bg-gray-50 p-4 border-gray-200">
         <div class="flex items-start gap-x-4">
             <div class="shrink-0 mt-1">
               <svg aria-hidden="true" class="size-5 text-gray-500" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
