--- a/Components/WarningContainer.razor
+++ b/Components/WarningContainer.razor
@@ -1,5 +1,5 @@
 <div class="mx-auto w-full max-w-4xl mb-6">
-    <div class="rounded-lg bg-yellow-50 p-4 ring-1 ring-inset ring-yellow-300">
+    <div class="bg-yellow-50 p-4 border-t-4 border-yellow-300">
         <div class="flex items-start gap-x-4">
             <div class="shrink-0 mt-1">
                 <svg aria-hidden="true" class="size-5 text-yellow-700" viewBox="0 0 55 54" fill="none" xmlns="http://www.w3.org/2000/svg">
