--- a/Pages/Home.razor
+++ b/Pages/Home.razor
@@ -6,8 +6,8 @@
 <!-- Hero Section -->
 <header class="bg-white">
     <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-        <div class="flex flex-row items-center justify-center gap-5">
-            <img src="/images/default.png" alt="Default Image" class="rounded-full">
+        <div class="flex flex-col md:flex-row items-center justify-center gap-5">
+            <img src="/images/default.png" alt="Default Image" class="rounded-full w-30 md:w-3xs">
             <div>
                 <h2 class="text-4xl font-bold text-gray-900 mb-4">GoForGoldman</h2>
                 <p class="text-xl text-gray-600 max-w-2xl mx-auto">Hi, I'm Matt. I talk about mobile dev, .NET, VR, motorcycles, homebrewing, Superman, science, and sometimes other things.</p>
