--- a/Components/InfoContainer.razor
+++ b/Components/InfoContainer.razor
@@ -1,5 +1,5 @@
 <div class="mx-auto w-full max-w-4xl mb-6">
-    <div class="border-t-4 bg-blue-50 p-4 border-blue-200">
+    <div class="border-t-4 bg-blue-50 dark:bg-blue-200 p-4 border-blue-200 dark:border-blue-600">
         <div class="flex items-start gap-x-4">
             <div class="shrink-0 mt-1">
                 <svg aria-hidden="true" class="size-5 text-blue-500" viewBox="0 0 55 55" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -7,9 +7,9 @@
                 </svg>
             </div>
             <div class="flex-1">
-                <h3 class="text-sm font-semibold text-blue-700 mt-1">@Title</h3>
+                <h3 class="text-sm font-semibold text-blue-700 dark:text-blue-600 mt-1">@Title</h3>
                 <div class="mt-1">
-                    <p class="text-sm text-blue-600">@ChildContent</p>
+                    <p class="text-sm text-blue-600 dark:text-blue-900">@ChildContent</p>
                 </div>
             </div>
         </div>
