--- a/Components/TipContainer.razor
+++ b/Components/TipContainer.razor
@@ -1,13 +1,13 @@
 <div class="mx-auto w-full max-w-4xl mb-6">
-    <div class="bg-blue-50 p-4 border-t-4 border-blue-200">
+    <div class="bg-green-50 dark:bg-green-200 p-4 border-t-4 border-green-200 dark:border-green-900">
         <div class="flex items-start gap-x-4">
             <div class="shrink-0 mt-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb-fill text-blue-500" viewBox="0 0 16 16"> <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z" fill="blue"></path> </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lightbulb-fill text-green-500" viewBox="0 0 16 16"> <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a1.964 1.964 0 0 0-.453-.618A5.984 5.984 0 0 1 2 6zm3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5z" fill="green"></path> </svg>
             </div>
             <div class="flex-1">
-                <h3 class="text-sm font-semibold text-blue-700 mt-1">@Title</h3>
+                <h3 class="text-sm font-semibold text-green-700 dark:text-green-600 mt-1">@Title</h3>
                 <div class="mt-1">
-                    <p class="text-sm text-blue-600">@ChildContent</p>
+                    <p class="text-sm text-green-600 dark:text-green-900">@ChildContent</p>
                 </div>
             </div>
         </div>
