--- a/Components/WarningContainer.razor
+++ b/Components/WarningContainer.razor
@@ -1,5 +1,5 @@
 <div class="mx-auto w-full max-w-4xl mb-6">
-    <div class="bg-yellow-50 p-4 border-t-4 border-yellow-300">
+    <div class="bg-yellow-50 dark:bg-yellow-200 p-4 border-t-4 border-yellow-300 dark:border-yellow-900">
         <div class="flex items-start gap-x-4">
             <div class="shrink-0 mt-1">
                 <svg aria-hidden="true" class="size-5 text-yellow-700" viewBox="0 0 55 54" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -7,9 +7,9 @@
                 </svg>
             </div>
             <div class="flex-1">
-                <h3 class="text-sm font-semibold text-yellow-700 mt-1">@Title</h3>
+                <h3 class="text-sm font-semibold text-yellow-700 dark:text-yellow-600 mt-1">@Title</h3>
                 <div class="mt-1">
-                    <p class="text-sm text-yellow-600">@ChildContent</p>
+                    <p class="text-sm text-yellow-600 dark:text-yellow-900">@ChildContent</p>
                 </div>
             </div>
         </div>
